# spelsylt4

./: .gitignore  Cargo.toml
Otto trying out shit/: Map.ase  Sprite-0001.ase  Sprite-0004.ase  Water dragon.ase
assets/: Hills.ase  assetconf.json  credits.txt
assets/sprites/: Dwarfs.ase  Maprea..ase  Town.ase  mapworking.ase  resurs_kristall.kra  rock.ase  rocki.ase  smaller.ase
assets/sprites/Ottos resurser/: Human.ase  Map Copy.ase  Maprea..ase  Water dragon.ase  elf.ase  golbin.ase  heraldry_outline.ase  human castle.ase  mapsafe.ase  military.ase  mur.ase  townhuman.ase
src/: assets.rs  main.rs  prelude.rs
src/game/: city_data.rs  city_graph.rs  graph_test.rs  market.rs  mod.rs  namelists.rs  scene.rs  strategic_hud.rs  strategic_map.rs  tooltip.rs  turn.rs
src/network/: .#message.rs  client.rs  message.rs  mod.rs  network_menu.rs  server.rs
