[package]
name = "spelsylt4"
version = "0.1.0"
edition = "2024"
default-run = "spelsylt4"

[dependencies]
accesskit = "0.21.1"
bevy_renet = { version = "3.0.0", features = ["netcode"] }
bevy_simple_text_input = "0.12.0"
bevy_ui_anchor = "0.10.0"
local-ip-address = "0.6.8"
petgraph = { version = "0.8.3", features = ["serde-1"] }
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.146"

[dependencies.bevy]
version = "0.17.3"
features = ["experimental_bevy_feathers"]
